Made changes in login and signup files

--- a/login.html
+++ b/login.html
@@ -27,6 +27,7 @@
 					<label for="password" class="input-label" hidden>Password</label>
 					<input type="password" name="password" class="input-field" placeholder="Password">
 				</div>
+				<button>Login</button>
 			</form>
 			
 		</section>
