--- a/signup.html
+++ b/signup.html
@@ -31,6 +31,7 @@
 					<label for="password" class="input-label" hidden>Password</label>
 					<input type="password" name="password" class="input-field" placeholder=" confirm Password">
 				</div>
+				<button>Register</button>
 			</form>
 			
 		</section>
